# cyberwave-edge-so101

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  calibrate.py  config.py  cw-driver.yml  cw_setup.py  entrypoint.sh  errors.py  find_port.py  follower.py  install_realsense_docker.sh  leader.py  main.py  pyproject.toml  read_device.py  remoteoperate.py  requirements.txt  rich_read_device.py  robot.py  setup.py  teleoperate.py  utils.py  write_position.py
.github/workflows/: push-to-docker-hub.yml
docs/: so101-calibration-controller-flow.md  so101-motor-safety-and-autocalibration.md
motors/: __init__.py  bus.py  encoding.py  feetech_bus.py  models.py  registers.py  tables.py
scripts/: __init__.py  cw_benchmark_camera.py  cw_benchmark_realsense.py  cw_calibrate.py  cw_find_port.py  cw_motor_dump.py  cw_motor_info.py  cw_read_device.py  cw_remoteoperate.py  cw_setup.py  cw_teleoperate.py  cw_test_motor_reads.py  cw_write_position.py
so101/: __init__.py  camera.py  follower.py  leader.py  robot.py
tests/: __init__.py  conftest.py  test_calibrate_cli.py  test_calibrate_upload.py  test_calibration_callbacks.py  test_calibration_main.py  test_collision.py  test_cw_alerts.py  test_cw_setup_config.py  test_device_utils.py  test_entrypoint.py  test_imports.py  test_main.py  test_motor_registers.py  test_motor_telemetry.py  test_telemetry.py  test_trackers.py  test_video_sync.py  test_voltage_discovery.py
utils/: __init__.py  alerts.py  config.py  cw_alerts.py  cw_remoteoperate_helpers.py  cw_teleoperate_helpers.py  cw_update_worker.py  cw_utils.py  device_utils.py  errors.py  keyboard.py  motor_telemetry.py  temperature.py  trackers.py  utils.py  video_sync.py
