[build-system]
requires = ["setuptools>=61.0,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberwave-so101"
version = "0.2.0"
description = "Standalone SO101 Robot Library for operating SO101 leader and follower robots using scservo_sdk (feetech)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Cyberwave", email = "info@cyberwave.com"},
]
keywords = ["robotics", "teleoperation", "feetech", "so101", "servo", "motor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyserial>=3.5",
    "feetech-servo-sdk",
    "cyberwave[camera]>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
so101-find-port = "find_port:main"
so101-read-device = "read_device:main"
so101-calibrate = "calibrate:main"
so101-setup = "cw_setup:main"
so101-teleoperate = "teleoperate:main"
so101-write-position = "write_position:main"
so101-remoteoperate = "remoteoperate:main"

[project.urls]
Homepage = "https://github.com/cyberwave/cyberwave-edge-python-so101"
Repository = "https://github.com/cyberwave/cyberwave-edge-python-so101"
Issues = "https://github.com/cyberwave/cyberwave-edge-python-so101/issues"

[tool.setuptools]
# Package structure: root-level modules + motors subpackage
# Since files are in root, we map the root to the package name
package-dir = {"" = "."}
packages = {find = {where = ["."]}}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"

